# symstorages-cleanuper

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml  requirements.txt  tg-requirements.txt
src/cleanuper/: __main__.py
tests/: test_database.py  test_datafile.py
tg_symstoremgr/: __main__.py  database.py  datafile.py
