[project]
name = "symstorages-cleanuper"
version = "0.0.3"
description = "Manages metadata files and do a cleanup of the symbols storages."
readme = "README.md"
authors = [{ name = "yoshikakbudto", email = "y.kakbudto@yahoo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["symbol-storages", "symstorages"]
dependencies = [
    "pymongo~=4.3.3",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/yoshikakbudto/symstorages-cleanuper"

[project.scripts]
symstorages-cleanuper = "symstorages-cleanuper.__main__:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "0.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']

"src/symstorages-cleanuper/__init__.py" = ["{version}"]
