[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tg_symstoremgr"
version = "0.0.1"
description = "Targem symbol-servers storage manager"
authors = ["Indev Dept. <indev@office.targem.ru>"]
readme = "README.md"
packages = [{include = "tg_symstoremgr"}]

[tool.poetry.scripts]
ssmgr = 'tg_symstoremgr.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pydocstyle = "^6.3.0"

[tool.poetry_bumpversion.file."tg_symstoremgr/__init__.py"]