[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tg_symstoremgr"
version = "0.0.2"
description = "Targem symbol-servers storage manager"
authors = ["Indev Dept. <indev@office.targem.ru>"]
readme = "README.md"
packages = [{include = "tg_symstoremgr"}]

[tool.poetry.scripts]
tg_symstoremgr = 'tg_symstoremgr.__main__:main'

[tool.poetry.dependencies]
# centos7 builders use python 3.6
python = ">=3.6.8"
pymongo = ">=4"

[tool.poetry.group.dev.dependencies]
flake8 = ">=5"
pydocstyle = "^6.3.0"
pytest = ">=7"

[tool.poetry_bumpversion.file."tg_symstoremgr/__init__.py"]